[project]
name = "resulty"
version = "0.1.0"
description = "A rust like Result type for Python"
authors = [{ name = "Rémi Kalbe", email = "me@remi.boo" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#
# Pixi configuration
#

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "test" }
dev = { features = ["dev"], solve-group = "dev" }
test-py312 = { features = ["test", "py312"], solve-group = "test-py312" }
test-py311 = { features = ["test", "py311"], solve-group = "test-py311" }
test-py310 = { features = ["test", "py310"], solve-group = "test-py310" }
test-py39 = { features = ["test", "py39"], solve-group = "test-py39" }
dev-py312 = { features = ["dev", "py312"], solve-group = "dev-py312" }
dev-py311 = { features = ["dev", "py311"], solve-group = "dev-py311" }
dev-py310 = { features = ["dev", "py310"], solve-group = "dev-py310" }
dev-py39 = { features = ["dev", "py39"], solve-group = "dev-py39" }

[tool.pixi.feature.dev.tasks]
check = "ruff check"
check-fix = "ruff check --fix"
check-watch = "ruff check --watch"
check-fix-watch = "ruff check --fix --watch"
format = "ruff format"
build = "hatch build"
publish = "hatch publish"

[tool.pixi.feature.test.tasks]
test = "pytest --tb=long -vv"

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.4.4,<0.5"
twine = ">=5.1.0,<5.2"
hatch = ">=1.11.0,<1.12"

[tool.pixi.feature.test.dependencies]
pytest-asyncio = ">=0.23.6,<0.24"
pytest = ">=8.2.1,<8.3"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"

[tool.pixi.feature.py311.dependencies]
python = ">=3.11,<3.12"

[tool.pixi.feature.py310.dependencies]
python = ">=3.10,<3.11"

[tool.pixi.feature.py39.dependencies]
python = ">=3.9,<3.10"


#
# Ruff configuration
#

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pixi",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 30
