[project]
name = "resulty"
version = "0.1.0"
description = "A rust like Result type for Python"
authors = [{ name = "Rémi Kalbe", email = "me@remi.boo" }]
requires-python = ">=3.12,<3.13"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

#
# Pixi configuration
#

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "osx-64", "win-64"]

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "test" }
dev = { features = ["dev"], solve-group = "dev" }
#test-py313 = { features = ["test", "py313"], solve-group = "test-py313" }
test-py312 = { features = ["test", "py312"], solve-group = "test-py312" }
#dev-py313 = { features = ["dev", "py313"], solve-group = "dev-py313" }
dev-py312 = { features = ["dev", "py312"], solve-group = "dev-py312" }

[tool.pixi.feature.dev.tasks]
check = "ruff check"
check-fix = "ruff check --fix"
check-watch = "ruff check --watch"
check-fix-watch = "ruff check --fix --watch"
format = "ruff format"
build = "hatch build"
publish = "hatch publish"

[tool.pixi.feature.test.tasks]
test = "pytest --tb=long --cov --cov-report xml -vv"

[tool.pixi.feature.dev.dependencies]
ruff = ">=0.4.4,<0.5"
twine = ">=5.1.0,<5.2"
hatch = ">=1.11.0,<1.12"
keyring = ">=25.2.1,<25.3"

[tool.pixi.feature.test.dependencies]
pytest-asyncio = ">=0.23.6,<0.24"
pytest = ">=8.2.1,<8.3"
pytest-cov = ">=5.0.0,<5.1"

#[tool.pixi.feature.py313.dependencies]
#python = ">=3.13,<3.14"

[tool.pixi.feature.py312.dependencies]
python = ">=3.12,<3.13"


#
# Ruff configuration
#

[tool.ruff]
line-length = 100
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pixi",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 30
